--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="./js/task-3.js" type="module"></script>
     <script src="./js/task-4.js" type="module"></script>
     <script src="./js/task-5.js" type="module"></script>
+    <script src="./js/task-6.js" type="module"></script>
 
     <title>Document</title>
 </head>
