--- a/task-2.html
+++ b/task-2.html
@@ -3,13 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="./js/task-2.js"></script>
+    <script src="./js/task-2.js" type="module"></script>
     <title>Document</title>
 </head>
 <body>
-    <ul class="gallery">
-        
-    </ul>
+    <ul class="gallery"></ul>
 
 </body>
 </html>
